repair base map2

--- a/misc/index.html
+++ b/misc/index.html
@@ -57,7 +57,7 @@
         function setBounds() {
             map.setMaxBounds(map.getBounds());
         }
-        var layer_OpenStreetMapMonochrome_0 = L.tileLayer('http://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', {
+        var layer_OpenStreetMapMonochrome_0 = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             opacity: 1.0,
             attribution: '',
             minZoom: 1,
